Fixed colors and spacing of purchase page

--- a/Assets/purchase.css
+++ b/Assets/purchase.css
@@ -1,25 +1,10 @@
 body {
   height: 100%;
-  width: 99vw;
+  width: 100vw;
   margin: 0;
   background: #eee;
   color: #fff;
   font-family: 'Open Sans', sans-serif;
-}
-
-
-/*--------------------
-NAVBAR
---------------------*/
-.cart-container {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-
-.cart-desc {
-  margin-left: 10px;
-  font-size: 13px;
 }
 
 
@@ -200,7 +185,7 @@ Products Container
 }
 
 .price {
-  color: #28406b;
+  color: #23211f;
   font-size: 22px;
   font-weight: 900;
   transition: color .3s ease-in-out;
@@ -210,7 +195,7 @@ Products Container
   font-size: 13px;
   font-weight: 900;
   text-transform: uppercase;
-  color: #28406b;
+  color: #b23323;
   padding: 12px 18px;
   cursor: pointer;
   transition: all 300ms;
@@ -223,7 +208,7 @@ Products Container
 }
 
 .button:hover {
-  background: linear-gradient(135deg, #3d61a1, #28406b);
+  background: linear-gradient(135deg, #d84417, #b23323);
   color: #fff;
   border: none;
 }
